--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
 							<a href="./index.html">&nbsp;&nbsp;&nbsp;首页&nbsp;&nbsp;&nbsp;</a>
 						</li>
 						<li>
-							<a href="#about">&nbsp;&nbsp;&nbsp;论坛&nbsp;&nbsp;&nbsp;</a>
+							<a href="./blog.html">&nbsp;&nbsp;&nbsp;论坛&nbsp;&nbsp;&nbsp;</a>
 						</li>
 						<li>
 							<a href="./search.html">&nbsp;&nbsp;&nbsp;搜索&nbsp;&nbsp;&nbsp;</a>
@@ -35,13 +35,13 @@
 
 					</ul>
 					<ul class="nav navbar-nav navbar-right user">
-						<form class="navbar-form navbar-left" method="post" action="/api/login/">
+						<form class="navbar-form navbar-left">
 							<div class="form-group">
-								<input type="text" class="form-control" name="username" placeholder="用户名">
-								<input type="text" class="form-control" name="password" placeholder="密码">
+								<input type="text" class="form-control" id="username" placeholder="用户名">
+								<input type="text" class="form-control" id="password" placeholder="密码">
 
 							</div>
-							<button class="btn btn-default" type="submit">登录</button>
+							<button class="btn btn-default" onclick="login()">登录</button>
 						</form>
 						<li>
 							<a href="./register.html">注册</a>
@@ -138,23 +138,23 @@
 				})
 			}
 
-			// function login() {
-			// 	$.ajax({
-			// 		type: "POST",
-			// 		url: "/api/login/",
-			// 		// data:"username=admin&password=123456&checkcode=jhdf",
-			// 		data: {
-			// 			username: $('#username').val(),
-			// 			password: $('#password').val(),
-			//
-			// 		},
-			// 		success: function(data) {
-			// 			if(data.is_login){
-			// 				window.location.reload()
-			// 			}
-			// 		}
-			// 	})
-			// }
+			function login() {
+				$.ajax({
+					type: "POST",
+					url: "/api/login/",
+					// data:"username=admin&password=123456&checkcode=jhdf",
+					data: {
+						username: $('#username').val(),
+						password: $('#password').val(),
+						
+					},
+					success: function(data) {
+						if(data.is_login){
+							window.location.reload()
+						}
+					}
+				})
+			}
 		</script>
 	</body>
 
